syntax = "proto3";
package admin;

service Admin {
  rpc ForceElectionTimeout(ForceElectionTimeoutRequest)
      returns (ForceElectionTimeoutResponse);
}

message ForceElectionTimeoutRequest {}
message ForceElectionTimeoutResponse {}